add 12bytes cdb ata commands
git-svn-id: https://idle3-tools.svn.sourceforge.net/svnroot/idle3-tools/branches/sat@19 a2562e0c-b1cb-4948-88ac-9f6679b3a325

--- a/idle3ctl.8
+++ b/idle3ctl.8
@@ -50,6 +50,9 @@ disable idle3 timer
 .I -s<value>
 set idle3 timer raw value. Value must be an integer between 1 and 255.
 The idle3 timer is set in 0.1s for the 1-128 range, and in 30s for the 129-255 range.
+.TP
+.I --cdb12
+Use 12-bytes cdbs (default is 16-bytes cdbs)
 .SH BUGS
 Please report any bugs on the sourceforge tracker at 
 .B https://sourceforge.net/tracker/?group_id=329372&atid=1381968
